# hq_platform

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md
cmake/: configure.cmake  esp.cmake  modules.cmake  posix.cmake
defconfig/: esp.defconfig  posix.defconfig
docs/: ESP_UART_Configuration.md  HQ_PLATFORM_BUILD_SYSTEM.md  IMPLEMENTATION.md  OSAL_Assertions.md  OSAL_Queue_API.md  OSAL_SPECIFICATION.md  OSAL_Semaphore_API.md  OSAL_Task_Management.md  OSAL_Timer_API.md  QUICK_REFERENCE.md
examples/: CMakeLists.txt  cmd_hello.c
examples/common/: cmd_demo.c  osal_demo.c
examples/esp/cmd_demo/: CMakeLists.txt
examples/esp/cmd_demo/main/: CMakeLists.txt
examples/esp/osal_demo/: CMakeLists.txt
examples/esp/osal_demo/main/: CMakeLists.txt
examples/osal_demo/: CMakeLists.txt  README.md
examples/osal_demo/main/: CMakeLists.txt  osal_demo.c
examples/posix/: CMakeLists.txt
main/: CMakeLists.txt  main.c
scripts/: README.md  esp_build.sh  menuconfig.sh  posix_build.sh
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  hq_cmd_core.c  hq_cmd_hello.c
src/cmd/commands/: hq_cmd_hello.c  hq_cmd_register.c  hq_cmd_wifi.c
src/cmd/include/: hq_cmd.h  hq_cmd_internal.h
src/mongoose/: CMakeLists.txt  mongoose_process.c  mongoose_process.h
src/mongoose/esp/: mongoose_config.h
src/mongoose/posix/: mongoose_config.h
src/osal/: CMakeLists.txt
src/osal/common/: osal_error.c  osal_log.c
src/osal/esp/: esp_littlefs.h  osal_assert.c  osal_bin_sem_impl.c  osal_count_sem_impl.c  osal_file_impl.c  osal_impl_file.h  osal_impl_queue.h  osal_impl_sem.h  osal_impl_task.h  osal_impl_timer.h  osal_littlefs_backend.h  osal_mount_impl.c  osal_mutex_impl.c  osal_queue_impl.c  osal_task_impl.c  osal_timer_impl.c
src/osal/esp/littlefs_impl/: Kconfig  esp_littlefs.c  lfs_config.h  littlefs_api.h  littlefs_esp_part.c
src/osal/include/: osal_assert.h  osal_bin_sem.h  osal_common_type.h  osal_count_sem.h  osal_error.h  osal_file.h  osal_log.h  osal_log_impl.h  osal_macro.h  osal_mount.h  osal_mutex.h  osal_queue.h  osal_task.h  osal_time.h  osal_timer.h
src/osal/posix/: osal_assert.c  osal_bin_sem_impl.c  osal_count_sem_impl.c  osal_file_impl.c  osal_impl_queue.h  osal_impl_sem.h  osal_impl_task.h  osal_impl_timer.h  osal_littlefs_backend.h  osal_log_impl.c  osal_mount_impl.c  osal_mutex_impl.c  osal_queue_impl.c  osal_task_impl.c  osal_timer_impl.c
src/protocols/: http_server.c  http_server.h  mqtt_app.c  mqtt_app.h  mqtt_config.c  mqtt_config.h
src/wifi/: CMakeLists.txt  wifi_config.c  wifi_config.h  wifi_hal_driver.h  wifi_managment.c  wifi_managment.h  wifi_utils.c  wifi_utils.h  wifidrv.h
tests/: CMakeLists.txt  README.md  common_tests.cmake  tests.c
tests/osal/: osal_file_test.c  osal_mount_test.c  osal_queue_test.c  osal_sync_test.c  osal_task_test.c  osal_timer_test.c
tests/osal_tests_esp/: CMakeLists.txt  README.md
tests/osal_tests_esp/main/: CMakeLists.txt
tests/platform/esp/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.default
tests/platform/esp/main/: CMakeLists.txt
tests/wifi/: wifi_config_test.c  wifi_hal_mock.c  wifi_hal_mock.h  wifi_mgmt_test.c  wifi_tests_runner.c  wifi_utils_test.c
