cmake_minimum_required(VERSION 3.16)

if(DEFINED ENV{IDF_PATH} AND ESP_PLATFORM)
  # Tell ESP-IDF where to find components
  set(EXTRA_COMPONENT_DIRS src/osal)
  include($ENV{IDF_PATH}/tools/cmake/project.cmake)
  project(hq_platform)
  # For ESP-IDF builds, set platform to ESP
  set(CONFIG_HQ_PLATFORM_ESP ON CACHE BOOL "Build ESP backend" FORCE)
  set(CONFIG_HQ_PLATFORM_POSIX OFF CACHE BOOL "Build POSIX backend" FORCE)
  set(CONFIG_OSAL_LOG_LEVEL 0 CACHE STRING "OSAL log level" FORCE)
else()
  project(hq_platform C)
endif()

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

option(HQ_BUILD_TESTS "Build tests" OFF)
option(HQ_BUILD_EXAMPLES "Build examples" OFF)

set(HQ_DEFCONFIG "" CACHE FILEPATH "Path to defconfig file")

function(hq_read_defconfig defconfig_path)
  if(NOT EXISTS "${defconfig_path}")
    message(FATAL_ERROR "Defconfig not found: ${defconfig_path}")
  endif()

  file(STRINGS "${defconfig_path}" _hq_def_lines)
  foreach(_hq_line IN LISTS _hq_def_lines)
    string(REGEX REPLACE "^[ \t]+" "" _hq_line "${_hq_line}")
    if(_hq_line MATCHES "^#" OR _hq_line STREQUAL "")
      continue()
    endif()

    if(_hq_line MATCHES "^(CONFIG_[A-Za-z0-9_]+)=(.*)$")
      set(_hq_name "${CMAKE_MATCH_1}")
      set(_hq_value "${CMAKE_MATCH_2}")

      if(_hq_value STREQUAL "y")
        set(${_hq_name} ON CACHE BOOL "" FORCE)
      elseif(_hq_value STREQUAL "n")
        set(${_hq_name} OFF CACHE BOOL "" FORCE)
      else()
        string(REGEX REPLACE "^\"(.*)\"$" "\\1" _hq_value "${_hq_value}")
        set(${_hq_name} "${_hq_value}" CACHE STRING "" FORCE)
      endif()
    endif()
  endforeach()
endfunction()

if(HQ_DEFCONFIG AND NOT ESP_PLATFORM)
  hq_read_defconfig("${HQ_DEFCONFIG}")
endif()

set(CONFIG_HQ_PLATFORM_POSIX ${CONFIG_HQ_PLATFORM_POSIX} CACHE BOOL "Build POSIX backend")
set(CONFIG_HQ_PLATFORM_ESP ${CONFIG_HQ_PLATFORM_ESP} CACHE BOOL "Build ESP backend")
set(CONFIG_OSAL_LOG_LEVEL ${CONFIG_OSAL_LOG_LEVEL} CACHE STRING "OSAL log level")

if(NOT ESP_PLATFORM)
  if(CONFIG_HQ_PLATFORM_POSIX AND CONFIG_HQ_PLATFORM_ESP)
    message(FATAL_ERROR "Both CONFIG_HQ_PLATFORM_POSIX and CONFIG_HQ_PLATFORM_ESP are enabled")
  endif()

  if(NOT CONFIG_HQ_PLATFORM_POSIX AND NOT CONFIG_HQ_PLATFORM_ESP)
    message(FATAL_ERROR "No platform selected: enable CONFIG_HQ_PLATFORM_POSIX or CONFIG_HQ_PLATFORM_ESP")
  endif()
endif()

if(NOT ESP_PLATFORM)
  if(CONFIG_HQ_PLATFORM_POSIX)
    include(cmake/posix.cmake)
  else()
    include(cmake/esp.cmake)
  endif()
endif()

if(NOT DEFINED CONFIG_OSAL_LOG_LEVEL)
  set(CONFIG_OSAL_LOG_LEVEL 3 CACHE STRING "OSAL log level" FORCE)
endif()

set(HQ_CONFIG_HEADER "${CMAKE_BINARY_DIR}/hq_config.h")
file(WRITE "${HQ_CONFIG_HEADER}" "/* Auto-generated by CMake. Do not edit. */\n")
file(APPEND "${HQ_CONFIG_HEADER}" "#ifndef HQ_CONFIG_H\n#define HQ_CONFIG_H\n\n")

if(CONFIG_HQ_PLATFORM_POSIX)
  file(APPEND "${HQ_CONFIG_HEADER}" "#define CONFIG_HQ_PLATFORM_POSIX 1\n")
else()
  file(APPEND "${HQ_CONFIG_HEADER}" "/* #undef CONFIG_HQ_PLATFORM_POSIX */\n")
endif()

if(CONFIG_HQ_PLATFORM_ESP)
  file(APPEND "${HQ_CONFIG_HEADER}" "#define CONFIG_HQ_PLATFORM_ESP 1\n")
else()
  file(APPEND "${HQ_CONFIG_HEADER}" "/* #undef CONFIG_HQ_PLATFORM_ESP */\n")
endif()

if(CONFIG_OSAL_LOG_LEVEL)
  file(APPEND "${HQ_CONFIG_HEADER}" "#define CONFIG_OSAL_LOG_LEVEL ${CONFIG_OSAL_LOG_LEVEL}\n")
else()
  file(APPEND "${HQ_CONFIG_HEADER}" "/* #undef CONFIG_OSAL_LOG_LEVEL */\n")
endif()

file(APPEND "${HQ_CONFIG_HEADER}" "\n#endif /* HQ_CONFIG_H */\n")

set(HQ_CONFIG_DIR "${CMAKE_BINARY_DIR}" CACHE PATH "Generated config header directory" FORCE)

if(ESP_PLATFORM)
  # For ESP-IDF, components are registered in their own CMakeLists.txt
  # ESP-IDF will automatically find and build them
else()
  add_subdirectory(src)

  if(HQ_BUILD_TESTS)
    add_subdirectory(tests)
  endif()

  if(HQ_BUILD_EXAMPLES)
    add_subdirectory(examples)
  endif()
endif()
